# bwi-core

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/bwi_core/models/: api_response.py  request_event.py
src/bwi_core/services/: cognito.py  deserialize_dynamo.py  dynamo.py  mqtt_ssm.py
src/bwi_core/utils/: camera_tags.py  logger.py
tests/: test_smoke.py
